--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-# Do not commit and push all node modules
+# Do not commit all node modules
 node_modules/
+
+# Do not commit status_reports folder
+status_reports/
