--- a/package.json
+++ b/package.json
@@ -1,14 +1,32 @@
 {
-  "name": "senior-project",
-  "version": "1.0.0",
-  "description": "Rebuild Genius Coding website, writing both backend (using MongoDB, Express.js, and Node.js), and frontend (using EJS templating (which is compiled into HTML), JavaScript, and Sass (*.scss) which will be compiled to CSS for the browser to handle.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Jacob Hornbeck",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.3"
-  }
+    "name": "senior-project",
+    "version": "1.0.0",
+    "description": "Rebuild Genius Coding website, writing both backend (using MongoDB, Express.js, and Node.js), and frontend (using EJS templating (which is compiled into HTML), JavaScript, and CSS.",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Jacob Hornbeck",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "connect-flash": "^0.1.1",
+        "connect-mongodb-session": "^3.1.1",
+        "cors": "^2.8.5",
+        "csurf": "^1.11.0",
+        "ejs": "^3.1.7",
+        "express": "^4.17.3",
+        "express-session": "^1.17.2",
+        "express-validator": "^6.14.0",
+        "mongodb": "^4.5.0",
+        "mongoose": "^6.3.1",
+        "multer": "^1.4.4",
+        "nodemailer": "^6.7.3",
+        "nodemailer-sendgrid-transport": "^0.2.0"
+    },
+    "devDependencies": {
+        "dotenv": "^16.0.0",
+        "nodemon": "^2.0.15"
+    }
 }
