--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
         "connect-mongodb-session": "^3.1.1",
         "cors": "^2.8.5",
         "csurf": "^1.11.0",
+        "dotenv": "^16.0.0",
         "ejs": "^3.1.7",
         "express": "^4.17.3",
         "express-session": "^1.17.2",
         "express-validator": "^6.14.0",
+        "jsonwebtoken": "^8.5.1",
         "mongodb": "^4.5.0",
         "mongoose": "^6.3.1",
         "multer": "^1.4.4",
@@ -26,7 +28,6 @@
         "nodemailer-sendgrid-transport": "^0.2.0"
     },
     "devDependencies": {
-        "dotenv": "^16.0.0",
         "nodemon": "^2.0.15"
     }
 }
