--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
     "name": "senior-project",
     "version": "1.0.0",
-    "description": "Rebuild Genius Coding website, writing both backend (using MongoDB, Express.js, and Node.js), and frontend (using EJS templating (which is compiled into HTML), JavaScript, and CSS.",
+    "description": "Rebuild Genius Coding website, writing both backend (using MongoDB, Express.js, and Node.js), and frontend (using EJS templating (which is compiled into HTML), JavaScript, and Sass (SCSS).",
     "main": "index.js",
     "scripts": {
         "start": "nodemon index.js",
+        "sass": "sass --watch public/scss/main.scss public/css/main.css",
+        "report": "python status_reports/status-report.py",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Jacob Hornbeck",
