--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "nodemon index.js",
         "sass": "sass --watch public/scss/main.scss public/css/main.css",
-        "report": "python status_reports/status-report.py",
+        "report": "cd status_reports && python status-report.py",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Jacob Hornbeck",
@@ -22,6 +22,7 @@
         "express": "^4.17.3",
         "express-session": "^1.17.2",
         "express-validator": "^6.14.0",
+        "highlight.js": "^11.5.1",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^4.5.0",
         "mongoose": "^6.3.1",
