--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "dotenv": "^16.0.0",
         "ejs": "^3.1.7",
         "express": "^4.17.3",
+        "express-rate-limit": "^6.4.0",
         "express-session": "^1.17.2",
         "express-validator": "^6.14.0",
         "highlight.js": "^11.5.1",
